# plib

./: .gitignore  CMakeLists.txt  build.sh  doxygen.txt
include/plib/: dstructs.h  dynarray.h  hints.h  intfmt.h  io.h  plib.h  string.h  thread.h  utils.h
src/: dstructs.c  dstructs.h  dynarray.c  io.c  plib_dstructs.c  plib_dstructs.h  plib_jmp.h  string.c  string_view.c  thread.c
src/asm/x86_64/: plib_jmp.S
src/include/: string_internal.h
