cmake_minimum_required(VERSION 3.25)
project(plib)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_EXTENSIONS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wno-pedantic")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -O0")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2 -DNDEBUG")

if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

find_package(Threads REQUIRED)

file(GLOB C_SOURCES "${CMAKE_SOURCE_DIR}/src/*.c")
add_library(${PROJECT_NAME} ${C_SOURCES})

target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)

if(DEFINED CMAKE_CUSTOM_INSTALL_PREFIX)
    set(CMAKE_INSTALL_PREFIX "${CMAKE_CUSTOM_INSTALL_PREFIX}" CACHE PATH "Install path prefix" FORCE)
endif()

install(TARGETS ${PROJECT_NAME}
        DESTINATION lib/)
install(DIRECTORY include/${PROJECT_NAME}/
        DESTINATION include/${PROJECT_NAME}/)

